--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -45,7 +45,7 @@
       Bikelog.DashboardActivityPlots.setup("dashboard-activity-distance-plot",
         "dashboard-activity-duration-plot",
         "<%= dashboard_activity_plots_data_path(:json) %>",
-        "<%= Bikelog::Config.distance_units %>");
+        "<%= current_user.distance_units %>");
     });
   </script>
 
