--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,20 @@
         <li><%= link_to "Dashboard", dashboard_path %>
         <li><%= link_to "Logs", logs_path %>
         <li><%= link_to "Add a new log", new_log_path %>
+        <li><%= link_to "My Profile", profile_path %>
       </ol>
+      <p class="info">
+        Logged in as
+        <strong><%= current_user.display_name %></strong>
+        (<%= link_to "Log Out", logout_path, :method => :put %>)
+      </p>
+      <br class="clear">
     </div>
+    <%- if flash[:notice] -%>
+      <div id="flash-notice">
+        <%= flash[:notice] %>
+      </div>
+    <%- end -%>
     <%- if flash[:error] -%>
       <div id="flash-error">
         <%= flash[:error] %>
