--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -8,7 +8,7 @@
     Bikelog.Map.setup("track-map", "<%= log_track_trackpoints_path(@track.log, @track, :json) %>");
     Bikelog.DistanceElevationPlot.setup("track-distance-elevation-plot",
       "<%= plot_data_log_track_path(@track.log, @track, :json) %>",
-      "<%= Bikelog::Config.distance_units %>");
+      "<%= current_user.distance_units %>");
   });
 </script>
 
