--- a/app/views/trackpoints/index.html.erb
+++ b/app/views/trackpoints/index.html.erb
@@ -18,7 +18,7 @@
       <td><%=format_coordinates trackpoint.latitude, trackpoint.longitude %></td>
       <td class="r">
         <%- if @trackpoints[i + 1] -%>
-          <%= trackpoint.distance_to_trackpoint(@trackpoints[i + 1]).round(2) %>&nbsp;m
+          <%=format_short_distance trackpoint.distance_to_trackpoint(@trackpoints[i + 1]) %>
         <%- else -%>
           –
         <%- end -%>
@@ -30,7 +30,13 @@
           –
         <%- end -%>
       </td>
-      <td class="r"><%= trackpoint.elevation.round %>&nbsp;m</td>
+      <td class="r">
+        <%- if trackpoint.elevation -%>
+          <%=format_short_distance trackpoint.elevation %>
+        <%- else -%>
+          –
+        <%- end -%>
+      </td>
       <td class="r">
         <%= link_to "Split track here", split_log_track_path(@track.log, @track, :trackpoint_id => trackpoint.id), :method => :put %> |
         <%= link_to "Delete this trackpoint", log_track_trackpoint_path(@track.log, @track, trackpoint), :method => :delete %>
