Implement transfer of tracks

--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -68,6 +68,17 @@ input[type="text"], input[type="password"] {
 	border-radius: 4px;
 }
 
+input[type="submit"].green {
+	color: #fff;
+	font-family: sans-serif;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 6px 20px;
+	background-color: green;
+	border: none;
+	border-radius: 6px;
+}
+
 .clear {
 	clear: both;
 }
