--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -63,6 +63,7 @@
         <li><%= link_to "Export track as GPX", log_track_path(@track.log, @track, :format => :gpx) %>
         <li><%= link_to "Show trackpoints", log_track_trackpoints_path(@track.log, @track) %>
         <li><%= link_to "Rename this track", nil, :id => "track-rename-link" %>
+        <li><%= link_to "Transfer this track", transfer_log_track_path(@track.log, @track) %>
         <%- if @track.log.tracks.size > 1 -%>
           <li><%= link_to "Delete this track", log_track_path(@track.log, @track), :method => :delete, :confirm => "Do you really want to delete this track?" %>
         <%- end -%>
