--- a/app/views/trackpoints/index.html.erb
+++ b/app/views/trackpoints/index.html.erb
@@ -38,8 +38,10 @@
         <%- end -%>
       </td>
       <td class="r">
-        <%= link_to "Split track here", split_log_track_path(@track.log, @track, :trackpoint_id => trackpoint.id), :method => :put %> |
-        <%= link_to "Delete this trackpoint", log_track_trackpoint_path(@track.log, @track, trackpoint), :method => :delete %>
+        <%- if @trackpoints_count > 2 -%>
+          <%= link_to "Split track here", split_log_track_path(@track.log, @track, :trackpoint_id => trackpoint.id), :method => :put %> |
+          <%= link_to "Delete this trackpoint", log_track_trackpoint_path(@track.log, @track, trackpoint), :method => :delete %>
+        <%- end -%>
       </td>
     </tr>
   <%- end -%>
