--- a/app/views/trackpoints/index.html.erb
+++ b/app/views/trackpoints/index.html.erb
@@ -39,7 +39,9 @@
       </td>
       <td class="r">
         <%- if @trackpoints_count > 2 -%>
-          <%= link_to "Split track here", split_log_track_path(@track.log, @track, :trackpoint_id => trackpoint.id), :method => :put %> |
+          <%- if i > 1 and @trackpoints[i + 1] -%>
+            <%= link_to "Split track here", split_log_track_path(@track.log, @track, :trackpoint_id => trackpoint.id), :method => :put %> |
+          <%- end -%>
           <%= link_to "Delete this trackpoint", log_track_trackpoint_path(@track.log, @track, trackpoint), :method => :delete %>
         <%- end -%>
       </td>
