--- a/app/assets/stylesheets/logs.css
+++ b/app/assets/stylesheets/logs.css
@@ -132,8 +132,13 @@
 	text-align: right;
 }
 
-#log-tracks-table {
+#log-tracks-table, #log-alternatives-table {
 	width: 100%;
+}
+
+#log-alternatives-table > tbody > tr.h {
+  background-color: green;
+  color: white;
 }
 
 #logs-navigation {
