--- a/app/assets/stylesheets/tracks.css
+++ b/app/assets/stylesheets/tracks.css
@@ -83,3 +83,32 @@
 	font-size: 18px;
 	margin-top: 50px;
 }
+
+#map-popup {
+	position: absolute;
+	border: 2px solid #aaa;
+	border-radius: 10px;
+	width: 150px;
+	visibility: hidden;
+	font-size: 11px;
+	background-color: #fff;
+	padding: 10px;
+}
+
+#map-popup dl {
+	margin: 0;
+}
+
+#map-popup dt {
+	float: left;
+	clear: left;
+	color: #888;
+	font-weight: bold;
+	text-align: right;
+	width: 50px;
+	margin-right: 6px;
+}
+
+#map-popup dt, #map-popup dd {
+	padding: 1px 0;
+}
