Relative IDs for tracks

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -12,7 +12,7 @@
   });
 </script>
 
-<h1 id="track-name" data-default-name="<%= "Track #{@track.id}" %>"><%= @track.display_name %></h1>
+<h1 id="track-name" data-default-name="<%= "Track #{@track.relative_id}" %>"><%= @track.display_name %></h1>
 
 <div id="track-page">
   <div id="track-left-column">
