--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,4 +1,4 @@
-<%- title "Track #{@track.id}" -%>
+<%- title @track.display_name -%>
 
 <%= javascript_include_tag "http://maps.google.com/maps/api/js?sensor=false" %>
 <%= javascript_include_tag "tracks" %>
