--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -50,8 +50,12 @@
   </script>
 
   <div id="dashboard-activity">
-    <div id="dashboard-activity-distance-plot"></div>
-    <div id="dashboard-activity-duration-plot"></div>
+    <div class="plot-wrapper">
+      <div id="dashboard-activity-distance-plot"></div>
+    </div>
+    <div class="plot-wrapper">
+      <div id="dashboard-activity-duration-plot"></div>
+    </div>
   </div>
 <%- else -%>
   <p id="dashboard-no-logs">
