--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="row submit">
-      <%= submit_tag "Update profile" %>
+      <%= submit_tag "Update Profile" %>
     </div>
   </div>
 <% end %>
