--- a/app/assets/stylesheets/auth.css
+++ b/app/assets/stylesheets/auth.css
@@ -4,6 +4,7 @@
 	padding: 15px 20px;
 	border: 3px solid #eee;
 	border-radius: 10px;
+	background-color: #fff;
 }
 
 .login-dialog-box {
@@ -17,21 +18,12 @@
 	display: block;
 }
 
-.login-dialog-box input[type="text"],
-.login-dialog-box input[type="password"] {
+.login-dialog-box input[type="text"], .login-dialog-box input[type="password"] {
 	display: block;
 	margin-top: 5px;
 	width: 130px;
 }
 
 #login-dialog input[type="submit"] {
-	color: #fff;
-	font-family: sans-serif;
-	font-size: 14px;
-	font-weight: bold;
-	padding: 6px 20px;
-	margin-top: 22px;
-	background-color: green;
-	border: none;
-	border-radius: 6px;
+	margin-top: 21px;
 }
